--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1 {
     display: flex;
     justify-content: center;
-    margin-top: 15%;
-    font-size: 100px;
+    margin-top: 70%;
+    font-size: 70px;
     color: white;
     font-family: 'Amatic SC', cursive;
 }
@@ -15,6 +15,7 @@ h1 {
 #reveal{
     font-size: 30px;
     border-radius: 25px;
+    font-family: 'Amatic SC', cursive;
 }
 
 body{
